[tool.poetry]
name = "flask_template"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6"
rich = "^9.2.0"
gunicorn = "^20.0.4"
requests = "^2.25.1"
Flask = "^1.1.2"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flask = "^1.1.0"
black = "^20.8b1"
rope = "^0.18.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
